# AWETrim

./: .gitignore  AGENTS.md  CITATION.cff  NOTICE  README.md  README_WEBSITE.html  fit_results_RI.pkl  fit_results_RI_RO.pkl  fit_results_RO_RI.pkl  objects.inv  pyproject.toml  searchindex.js  tangential_force_alpha.pgf  tangential_force_crosswind.pgf  tangential_force_va.pgf  temp_view.txt
.doctrees/: README_WEBSITE.doctree  environment.pickle  index.doctree
data/: ap2_aero_input.json  rigid_kite.json  v3_aero_input.json  v3_aero_input_identified.json  v9_aero_input.json
data/AP2/: ap2_aero_input.json  ap2_config.yaml  ap2_data.py
data/LEI-V3-KITE/: as_config.yaml  polars.csv  polars_VSM.csv  rom_config.yaml  struc_geometry_FEM_full.yaml  struc_geometry_PSM_reduced.yaml  struc_geometry_PSM_reduced_photogrammetry_adjusted.yaml  v3_VSM_aero_input.json  v3_aero_input.json  v3_aero_input_constant.json  v3_aero_input_identified.json  v3_config.yaml  v3_downloop_config_example_spline.yaml  v3_helix_config_example_spline.yaml  v3_kite_input.yaml  v3_uploop_config_example_spline.yaml
data/Megawes/: 100kw_aero_input.json  3MW_aero_input.json  inputs.txt
data/V11/: v11_aero_input.json
docs/: README_WEBSITE.md  content.js  index.html  style.css
notebooks/parametrize_path/: reelout_parametrization.ipynb
processed_data/: VSM_results_alpha_sweep.csv  aerodynamic_polars_v3.csv
scripts/: 2pointmass_rb.py  LETE_ratio.ipynb  README.md  ampyx.ipynb  b_spline_figure_eight.py  caca.py  coordinate_transformation.py  coordinate_transformations_sym.py  crosswind_case.py  cst_curve.py  downloop_pattern_spline.py  downloop_power_convergence.py  force_distribution_LE_TE.py  helix_pattern_spline.py  integrate_position.py  integrate_position_dyn.py  integrate_position_qs.py  interactive_figure8_weights.ipynb  optimize_pattern.py  optimize_pattern_helix.py  parametrized_paths.py  parametrized_paths_dyn.py  parametrized_paths_qs.py  pitch_stability.ipynb  plot_polars.ipynb  plot_polars.py  plot_power_vs_wind.py  plots_torque.py  plots_trajectories.py  run_cycle_simulation.py  simple_reelin.py  uploop_pattern_spline.py  uwe_model.ipynb  v3_kite.ipynb  validate_spline.py  validatev3.py  validatev9.py  wind_window.py
scripts/additional/: identify_polars.py  reference_frames_plotly.py  static_longitudinal_stability_pico.py
scripts/aerodynamics/: README.md  common.py  compute_stability_derivatives.py  solve_single_state.py
scripts/aerostructural/: README.md  common.py  run_simulation_FEM.py  run_simulation_PSM.py  run_simulation_level_2.py  run_simulation_level_qsm.py  run_sweep_course_steering_depower.py  run_sweep_wind_steering.py
scripts/cycle/: compare_v9.py  plot_wind_profile.py  profiling_cycle.py  run_cycle.py  run_ri_speeds.py  simulate_cycle.py
scripts/experimental/: README.md
scripts/identification/: README.md  plot_body_axes.py  (+1 more)
tests/: conftest.py
(+324 files in other folders)
