[project]
name = "awetrim"
version = "0.1.0"
description = "Aerostructural modelling, trim analysis, and trajectory optimisation for soft-kite Airborne Wind Energy Systems (AWES)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
  "airborne-wind-energy",
  "soft-kite",
  "aerostructural-simulation",
  "trajectory-optimisation",
  "vortex-step-method",
  "particle-system-simulator",
  "reduced-order-modelling",
  "wind-energy",
]

authors = [
  {name = "Oriol Cayon", email = "oriol.cayon@gmail.com"},
]
maintainers = [
  {name = "Oriol Cayon", email = "oriol.cayon@gmail.com"},
]

# Classifiers help categorize the project on PyPI and aid in discoverability.
# For a full list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy",
  "pandas>=1.5.3",
  "matplotlib>=3.7.1",
  "casadi",
  "h5py",
  "scipy",
  "PyYAML",
  "prompt_toolkit",
  "VSM @ git+https://github.com/awegroup/Vortex-Step-Method.git@2a12f13388122eafa541041c11c13be5f020f1fb",
  "PSS @ git+https://github.com/awegroup/Particle_System_Simulator.git@v1.0.2",
  "awes-ekf @ git+https://github.com/ocayon/EKF-AWE.git@7ca4660e7bf5d6b9ec56193fb4e722027fbc3ee0",
  "kite_fem @ git+https://github.com/awegroup/kite_fem.git@mass_proportional_regularisation",
  "awesIO @ git+https://github.com/awegroup/awesIO.git@d454992301e1790e069ff850eabf65526545d33c",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  ]

[project.urls]
"Homepage" = "https://github.com/awegroup/AWETrim"
"Documentation" = "https://awegroup.github.io/AWETrim/"
"Source" = "https://github.com/awegroup/AWETrim"
"Issues" = "https://github.com/awegroup/AWETrim/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
